-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.2
-
-
79820c8d6 (dev), 9c6908b49 (6.8), 5d8a3c136 (dev), d74685542 (6.10), bb6679980 (6.9), 848cb462e (tqtc/lts-6.8)
I recently found that Qt tooling gives us the following warning in a larger project with multiple QML components, including C++ code:
[build] Warning: PlotDataTransformModel.hh:: Multiple C++ types called bda::PlotDataTransformModel found! This violates the One Definition Rule! [build] Warning: BaseUIComponent.hh:: Multiple C++ types called bda::BaseUIComponent found! This violates the One Definition Rule!
I tried to investigate if there is anything special about these two classes, but they seem not very different from the many other C++ classes we have. And I checked, there is only a single definition "class BaseUIComponent" and "class PlotDataTransformModel", so the error is slightly confusing for me.
Is it possible to extend the warning message, so that at least the second occurence of the definition would be listed? That way, I could at least track them down one by one.
- is blocked by
-
QTBUG-119143 Generate line numbers in moc JSON output
-
- Closed
-
- relates to
-
QTBUG-132518 building with cmake 3.31 gives ODR violation warnings on webassembly
-
- Closed
-
-
QTBUG-134292 ODR warnings with static build
-
- Closed
-
| For Gerrit Dashboard: QTBUG-127133 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 579658,5 | qmltyperegistrar: improve error messages | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 587827,2 | qmltyperegistrar: improve error messages | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 658187,1 | Doc: Discourage linkage cycles in static QML modules | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
| 659910,8 | qmltyperegistrar: Do not process duplicate metatypes.json files | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 660481,2 | qmltyperegistrar: Do not process duplicate metatypes.json files | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 660658,5 | qmltyperegistrar: Do not process duplicate metatypes.json files | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 662267,2 | qmltyperegistrar: Do not process duplicate metatypes.json files | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |