qmltyperegistrar: improve error messages

Provide the line number when emitting a warning about a class. Moreover,
report also the previous location when a duplicate class entry is found.

Task-number: QTBUG-127133
Change-Id: I50e1df1158a0099b1c8fb705929592eb152a6cc9
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit 79820c8d63022b35387c32721bf4cad29f2ed4e9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>